# Afinador

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/isaacbegue/afinador/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeAudioEngine.cpp  NativeAudioEngine.h
app/src/main/java/com/isaacbegue/afinador/: MainActivity.kt
app/src/main/java/com/isaacbegue/afinador/data/: PreferencesRepository.kt
app/src/main/java/com/isaacbegue/afinador/model/: TuningData.kt
app/src/main/java/com/isaacbegue/afinador/ui/composables/: A4FrequencyControl.kt  NoteIndicators.kt  TargetNoteSelector.kt  TuningVisualizer.kt
app/src/main/java/com/isaacbegue/afinador/ui/screen/: SettingsScreen.kt  TunerScreen.kt
app/src/main/java/com/isaacbegue/afinador/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/isaacbegue/afinador/viewmodel/: TunerViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/isaacbegue/afinador/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
